# isabelle-proof-generator

./: .env  .gitignore  README.md  all_proofs.sh  conda_env.yml  logfile-1.html  pyproject.toml  requirements.txt  results.py  run_model.py  tester.py  testerV3.py
Data_transformations/: 1_json_dataset_creator_with_steps.py  4_index_dataset_creator.py  5_vector_dataset_creator.py  jsonl_to_json.py  utils.py
ISABELLE_VERIFICATION/: 1_isabelle_checker.py
Isabelle/: 1_isabelle_only_verifier_local.py  1_isabelle_verifier.py  1_isabelle_verifier_V2.py  1_isabelle_verifier_math.py  1_isabelle_verifier_reasoning.py  debug_lemma.py
MathModel/: 1_finetuneV2.py  1_finetuneV2_strong.py  1_finetune_raw.py  3_run_model_offline.py
RAG_and_Reasoning_stages/: 1_finetune.py  2_inference_offline.py  3_push.py  4_theory_dataset_stats_calculator.py  5_save_vectorize_database.py  6_inference.py
REGULAR_stages/: 1__finetune_config.json  1_finetune.py  2_push_model.py
Rag/: 1_generate_vector_database.py  2_push_vector_database.py
ReasonerModel/: 1_finetune.py  1_finetune_V3.py  1_finetune_raw.py  1_finetune_steps.py  1_finetune_strong.py  2_inference.py  3_push.py  6_inference.py  6_inference_rag_online_config.json
baldurcito/: jsonl_to_json.py  prepare_dataset.py
files_picasso/: bulk_inference.sh
isabelle-proof-generator/: dataset_to_mistral.py  download_dataset_split_as_jsonl.py  finetune.py  finetune_offline.py  isabelle2mistral.py  isabelle_proofs_dataset_creator.py  isabelle_text2mistral.py  json_dataset_creator.py  merge_model.py  proofs_to_mistral.py  sample_jsonl.py
(+6338 files in other folders)
