[tool.poetry]
name = "baldurcito"
version = "0.1.0"
description = ""
authors = ["jcrecio <juan.carlos.recio.abad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.20.3"
datasets = "^2.17.1"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prepare_dataset = "baldurcito.prepare_dataset:main"